improved makefile and gitignore

--- a/AoC-2022/Makefile
+++ b/AoC-2022/Makefile
@@ -1,7 +1,8 @@
 CC=gcc
-TARGET=aoc-2022
+TARGET=aoc-2022.exe
 SRC_FILES=$(wildcard *.c)
 OBJ_DIR=build
+OBJ_DIR_SENTINEL=$(OBJ_DIR)/.exists
 OBJ_FILES=$(patsubst %.c, $(OBJ_DIR)/%.o, $(SRC_FILES))
 
 all: $(TARGET)
@@ -9,13 +10,14 @@ all: $(TARGET)
 $(TARGET): $(OBJ_FILES)
 	$(CC) $^ -o $@
 
-$(OBJ_DIR)/%.o: %.c create_dir
+$(OBJ_DIR)/%.o: %.c $(OBJ_DIR_SENTINEL)
 	$(CC) -c $< -o $@
 
-create_dir:
+$(OBJ_DIR_SENTINEL):
 	mkdir -p $(OBJ_DIR)
+	touch $(OBJ_DIR_SENTINEL)
 
 clean:
-	rm -rf $(OBJ_DIR) $(TARGET).exe
+	rm -rf $(OBJ_DIR) $(TARGET)
 
 remake: clean all
